updated maps for patient and pahrmacy data

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,10 +3,11 @@ body { margin: 0; }
 #scene { width: 90%; height: 90%}
 
 /* SVG styling */
-svg {
+/*svg {
     font-family: helvetica, sans-serif;
 }
 
 path, line {
     stroke: #777;
 }
+*/
