--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,16 @@ svg {
     font-family: helvetica, sans-serif;
 }
 
-path, line {
-    stroke: #777;
+
+div.tooltip {
+  color: white;
+  position: relative;
+  text-align: left;
+  width: 150px;
+  height: 110px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: rgba(0,0,0,.8);
+  border: 2px solid black;
+  pointer-events: none;
 }
