added slider bar functionality and index formatting

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,11 @@ svg {
     font-family: helvetica, sans-serif;
 }
 
-
+flex-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
 div.tooltip {
   color: white;
   position: relative;
