--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@ body {
 	left:0; 
 	width:100%, 
 	height:100%;
-	background-color: rgb(150,150,150);
+	background-color: rgb(230,230,230);
   /*width:100%;*/
   /*height:300%;*/
 }
@@ -41,6 +41,10 @@ div.tooltip {
   pointer-events: none;
 }
 
+.svg-container{
+    width: 100%;
+    height:30%
+}
 
 circle {
     /*visibility: hidden;*/
