--- a/styles/main.css
+++ b/styles/main.css
@@ -41,9 +41,23 @@ div.tooltip {
   pointer-events: none;
 }
 
+div.tooltippatient { 
+    position: absolute;     
+    text-align: center;     
+    width: 120px;          
+    height: 40px;         
+    /*padding: 2px;       */
+    font: 12px sans-serif;    
+    background: black; 
+    border: 1px solid white;    
+    border-radius: 8px;     
+    pointer-events: none;  
+    color:white; }
+
+
 .svg-container{
     width: 100%;
-    height:30%
+    height:30%;
 }
 
 circle {
