--- a/styles/main.css
+++ b/styles/main.css
@@ -30,10 +30,9 @@ select{
 
 div.tooltip {
   color: white;
-  position: relative;
-  text-align: left;
-  width: 150px;
-  height: 110px;
+  position: absolute;
+  width: 180px;
+  height: 90px;
   padding: 2px;
   font: 12px sans-serif;
   background: rgba(0,0,0,.8);
