fixed plotting error, added doctor timeline tooltip, and made timeline a little faster

--- a/styles/main.css
+++ b/styles/main.css
@@ -38,6 +38,10 @@ svg .path {
   background: black;
 }
 
+.fillperiod{
+	position: absolute;
+}
+
 flex-container {
 	display: inline-flex;
 	flex-direction: row;
