--- a/styles/main.css
+++ b/styles/main.css
@@ -4,13 +4,15 @@ body {
 	right: 0; 
 	bottom: 0; 
 	left:0; 
-	width:100%, 
+	width:100%; 
 	height:100%;
-	background-color: rgb(230,230,230);
+  background-color: #202020; 
+  /*//#404040;*/
+	/*background-color: rgb(230,230,230);*/
   /*width:100%;*/
   /*height:300%;*/
 }
-}
+
 
 /* SVG styling */
 svg {
@@ -20,8 +22,9 @@ svg {
 svg .path {
   fill: none;
   stroke-opacity: .8;
-  stroke-dasharray: 3,2;
-  stroke: grey;
+  stroke-dasharray: 5,2;
+  stroke: orange;
+  stroke-width:2px;
 }
 
 #radio{
@@ -125,39 +128,7 @@ circle {
   left:10px;
 }
 
-/*   .infoDiv {
-    position: absolute;
-    top: 20%;
-    color: white;
-    border: 1px solid darkgray;
-    border-radius: 4px;
-    background: black;
-    opacity: 0.9;
-    padding: 10px;
-    width: 240px;
-    height: 320px;
-    float:right;
-    border-radius: 25px
-  }*/
-  .infoDiv .table {
-    width: 200px;
-  }
-  .infoDiv .dead {
-    color: #b10026;
-    font-size: 20px;
-  }
-  .infoDiv .injured {
-    color: #fd8d3c;
-  }
-
-  .infoDiv .ageGroup {
-    /*color: #66FFFF;*/
-    color:#fc8d59;
-    font-size: 20px;
-  }
-  .infoDiv .data {
-    text-align: right;
-  }
+ 
 
     .titleDiv {
     position: absolute;
@@ -165,7 +136,7 @@ circle {
     left: 250px;
     margin: auto;
     width: 700px;
-    font-family: Lato;
+    /*font-family: Lato;*/
     color: white;
     background: black;
     border: 1px solid white;
@@ -272,11 +243,11 @@ a:hover {
 
 #size2{
   width: 1000px;
-  color: Grey;
+  color: white;
 }
 
 #h4{
-  color : Grey;
+  color : white;
   font-family: Georgia;
   font-size : 150px;
 }
