--- a/styles/main.css
+++ b/styles/main.css
@@ -6,10 +6,42 @@ body {
 	left:0; 
 	width:100%, 
 	height:100%;
-	background-color: rgb(230,230,230);
+  background-color:black;
+	/*background-color: rgb(230,230,230);*/
   /*width:100%;*/
   /*height:300%;*/
 }
+}
+
+.mapbox-improve-map {
+    display: none;
+}
+
+.timeAxis line, path, text{
+  /*fill:gray;*/
+  stroke: gray;
+}
+
+
+
+.yAxis line, path, text{
+  /*fill:gray;*/
+  stroke: gray;
+}
+
+.xAxis line, path, text{
+  /*fill:gray;*/
+  stroke: gray;
+}
+
+.sliderAxis line, path, text{
+  /*fill:gray;*/
+  stroke: gray;
+}
+
+.p{
+  fill:gray;
+  stroke:gray;
 }
 
 /* SVG styling */
@@ -19,14 +51,29 @@ svg {
 
 svg .path {
   fill: none;
-  stroke-opacity: .8;
-  stroke-dasharray: 3,2;
-  stroke: grey;
+  stroke-opacity: .75;
+  /*stroke-dasharray: 1,2;*/
+  stroke: orange;
+  stroke-width:2px;
 }
 
 #radio{
   position: absolute;
   top: 13%;
+  left: 40%;
+  /*color: #efedf5;*/
+  width: 100px;
+  height:50px;
+  bottom: 190px;
+  color: white;
+  border: 1px solid darkgray;
+  border-radius: 4px;
+  background: black;
+}
+
+.back{
+  position: absolute;
+  top: 20%;
   left: 40%;
   /*color: #efedf5;*/
   width: 100px;
@@ -139,20 +186,6 @@ circle {
   left:10px;
 }
 
-/*   .infoDiv {
-    position: absolute;
-    top: 20%;
-    color: white;
-    border: 1px solid darkgray;
-    border-radius: 4px;
-    background: black;
-    opacity: 0.9;
-    padding: 10px;
-    width: 240px;
-    height: 320px;
-    float:right;
-    border-radius: 25px
-  }*/
   .infoDiv .table {
     width: 200px;
   }
