moved back button and tooltip uniformity

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,6 +66,7 @@ svg .path {
   position: absolute;
   top: 18%;
   left: 40%;
+  text-align: center;
   /*color: #efedf5;*/
   width: 80px;
   height:50px;
@@ -130,7 +131,7 @@ svg .path {
   height:50px;
   /*bottom: 190px;*/
   color: white;
-  
+
  /* border: 1px solid darkgray;
   border-radius: 4px;
   background: black;*/
@@ -154,29 +155,27 @@ svg .path {
 
 .back{
   position: absolute;
-  top: 25%;
-  left: 40%;
+  top: 1%;
+  right: 1%;
   /*color: #efedf5;*/
   width: 80px;
   height:50px;
   bottom: 190px;
   color: white;
   border: 1px solid darkgray;
-  border-radius: 4px;
+  border-radius: 2px;
   background: black;
 }
 
 button {
-	position: absolute;
-    top: 60%;
-    left: 45%;
+	/*position: absolute;*/
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 10px 10px;
+    /*padding: 10px 10px;*/
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    /*display: inline-block;*/
     font-size: 16px;
 }
 
@@ -216,11 +215,12 @@ div.tooltippatient {
     /*padding: 2px;       */
     font: 12px sans-serif;    
     background: black; 
-    border: 1px solid white;    
-    border-radius: 8px;     
+    opacity:0.1;
+    /*border: 1px solid white;    */
+    /*border-radius: 8px;     */
     pointer-events: all;  
     color:white;
-    /*cursor:crosshair*/
+    /*cursor:crosshair;*/
 }
 
 
@@ -296,7 +296,7 @@ circle {
     font-family: Lato;
     color: white;
     background: black;
-    border: 1px solid white;
+    /*border: 1px solid white;*/
     float:center;
     border-radius: 25px
   }
