--- a/styles/main.css
+++ b/styles/main.css
@@ -18,9 +18,19 @@ body {
 
 }
 
-.mapbox-improve-map {
-    display: none;
+.leaflet-control-attribution{
+  display: none !important;
+  /*background: none;*/
 }
+
+/*.mapbox-improve-map {
+    display: none;
+}*/
+
+.mapbox-logo{
+    display: none !important;
+}
+
 
 .timeAxis line, path, text{
   /*fill:gray;*/
@@ -54,6 +64,8 @@ svg {
     font-family: helvetica, sans-serif;
 }
 
+
+
 svg .path {
   fill: none;
   stroke-opacity: .75;
@@ -71,10 +83,10 @@ svg .path {
   width: 80px;
   height:50px;
   bottom: 190px;
-  color: white;
+  color: darkgrey;
   border: 1px solid darkgray;
   border-radius: 4px;
-  background: black;
+  /*background: black;*/
 }
 
 #patientHeader{
@@ -203,7 +215,7 @@ div.tooltip {
   font: 12px sans-serif;
   background: rgba(0,0,0,.8);
   border: 2px solid black;
-  pointer-events: all;
+  pointer-events: visibleFill;
   /*cursor:crosshair;*/
 }
 
@@ -218,7 +230,7 @@ div.tooltippatient {
     opacity:0.1;
     /*border: 1px solid white;    */
     /*border-radius: 8px;     */
-    pointer-events: all;  
+    pointer-events: visibleFill;  
     color:white;
     /*cursor:crosshair;*/
 }
@@ -267,49 +279,7 @@ circle {
   left:10px;
 }
 
-  .infoDiv .table {
-    width: 200px;
-  }
-  .infoDiv .dead {
-    color: #b10026;
-    font-size: 20px;
-  }
-  .infoDiv .injured {
-    color: #fd8d3c;
-  }
-
-  .infoDiv .ageGroup {
-    /*color: #66FFFF;*/
-    color:#fc8d59;
-    font-size: 20px;
-  }
-  .infoDiv .data {
-    text-align: right;
-  }
-
-    .titleDiv {
-    position: absolute;
-    top: 0px;
-    left: 250px;
-    margin: auto;
-    width: 700px;
-    font-family: Lato;
-    color: white;
-    background: black;
-    /*border: 1px solid white;*/
-    float:center;
-    border-radius: 25px
-  }
-  .titleDiv h1 {
-    text-align: center;
-    font-weight: normal;
-    margin-bottom: 0px;
-  }
-  .titleDiv h4 {
-    text-align: center;
-    font-weight: normal;
-    margin-top: 5px;
-  }
+ 
 
   .ticks {
       font-size: 10px;
@@ -408,3 +378,4 @@ a:hover {
   font-family: Georgia;
   font-size : 150px;
 }
+
