--- a/styles/main.css
+++ b/styles/main.css
@@ -11,11 +11,15 @@ body {
   /*width:100%;*/
   /*height:300%;*/
 }
+
+#selectionInputText{
+	position: absolute;
+	top: 3%;
+	left: 3%;
 }
 
 .leaflet-bottom.leaflet-right{
   opacity: 0;
-
 }
 
 .leaflet-control-attribution{
