re-fixed a bug where the tooltip didnt changed when you clicked on a node graph and with the doctor path nodes not removing when switching views

--- a/styles/main.css
+++ b/styles/main.css
@@ -235,7 +235,7 @@ div.tooltip {
   /*cursor:crosshair;*/
 }
 
-div.tooltippatient { 
+div.tooltippatient, div.tooltipgraph { 
     position: absolute;     
     text-align: center;     
     width: 150px;          
